--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -114,6 +114,7 @@ body {
   background: rgba(0, 0, 0, 0.8);
 }
 
+
 .section-desc {
   z-index: 1;
   position: relative;
@@ -241,13 +242,41 @@ body {
 }
 
 /* Number text (1/3 etc) */
+.modalTitle {
+  background-color: #000000b2;
+  color: aqua;
+  font-size: 82px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, 0%);
+}
+
+.modalInfo{
+  background-color: #000000b2;
+  color: aqua;
+  font-size: 32px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 30%;
+  min-width: 30%;
+  min-height: 30%;
+  width: auto;
+  height: auto;
+  left: 50%;
+  transform: translate(-50%, 0%);
+}
+
 .numbertext {
+  background-color: #000000b2;
   color: #f2f2f2;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
   top: 0;
 }
+
 
 img {
   margin-bottom: -4px;
