--- a/portfolio/src/styles/header.module.css
+++ b/portfolio/src/styles/header.module.css
@@ -39,14 +39,15 @@
 
 
 .collumn{
-    display: grid;
-    grid-template-rows: repeat(8, 1fr);
-    grid-row-gap: 3%;
+    width: 100%;
+    height: 100%;
 }
 
 .collumn img {
-    width: 100%;
-    height: 100%;
+    width: 150px;
+    height: 100px;
     object-fit: cover;
     border-radius: 10px;
+    position: relative;
+    transform: translateY(0px);
 }
