--- a/portfolio/src/styles/header.module.css
+++ b/portfolio/src/styles/header.module.css
@@ -1,7 +1,7 @@
 .header{
     width: 100vw;
     height: 95vh;
-    background-color: rgba(0, 0, 0, 0.55);
+    background-color: rgba(0, 0, 0, 0.75);
 }
 
 .headerContent{
@@ -12,15 +12,23 @@
     height: 100%;
 }
 
-.headerContent button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 10px 25px;
-    color: black;
-    background-color: #ddd;
+.title{
+    align-self: end;
+    font-weight: bold;
+    font-size: 80px;
+    text-shadow: rebeccapurple 0px 0px 10px;
+}
+
+.subtitle{
+    align-self: start;
     text-align: center;
-    cursor: pointer;
+}
+
+.subtitle button {
+    margin-top: 40%;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px aquamarine;
 }
 
 .background{
