--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,26 @@
 body{
   background-color: black;
 }
+
+.container{
+  margin: 100px auto auto;
+  border-radius: 12px;
+  padding: 14px;
+  box-shadow: 0 1px 0 1px rgba(0,0,0,.02),0 4px 6px rgba(0,0,0,.02),inset 0 0 0 6px #111;
+  background: linear-gradient(180deg,#242424,#121212 65.62%);
+  position: relative;
+  transition: background .15s ease;
+  border: 1px solid #333;
+}
+
+.container:hover{
+  background: linear-gradient(90deg,#242424,#121212 65.62%);
+}
+
+.break{
+  display: block;
+  width: 100%;
+  height: 1px;
+  background: #333;
+  margin: 20px 0;
+}
